--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.0",
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.0.0"
   }
 }
